--- a/AUTHORS
+++ b/AUTHORS
@@ -1,6 +1,11 @@
 
-From eventlet
--------------
+Evy
+---
+
+Alvaro Saurin <alvaro.saurin@gmail.com>
+
+From Eventlet and others
+------------------------
 
 * Ryan Williams, rdw on Freenode, breath@alum.mit.edu
 * Bob Ippolito
