--- a/TODO
+++ b/TODO
@@ -3,3 +3,5 @@ TODO
 
 * finish the I/O integration
 * integrate with http-parser (https://github.com/benoitc/http-parser)
+* create patched, uv-ified versions of:
+  - pysendfile
